Criada Barra Lateral

--- a/index.html
+++ b/index.html
@@ -9,12 +9,45 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+
     <title>CodeConnect</title>
 </head>
 
 <body>
+    <aside class="barra__lateral">
+        <img src="./img/Logo.svg" alt="Logo da CodeConnect" class="logo__codeconnect">
+        <ul class="barra__lateral__lista__links">
+            <li>
+                <a href="#" class="barra__lateral__lista__links__destaque">Publicar</a>
+            </li>
+            <li class="barra__lateral__lista__links__item">
+                <img src="./img/feed.svg" alt="icone do feed" class="barra__lateral__lista__links__item__img">
+                <a href="#" class="barra__lateral__lista__links__link">Feed</a>
+            </li>
+            <li class="barra__lateral__lista__links__item">
+                <img src="./img/account_circle.svg" alt="icone de perfil" class="barra__lateral__lista__links__item__img">
+                <a href="#" class="barra__lateral__lista__links__link">Perfil</a>
+            </li>
+            <li class="barra__lateral__lista__links__item">
+                <img src="./img/info.svg" alt="icone de informações sobre nós" class="barra__lateral__lista__links__item__img">
+                <a href="#" class="barra__lateral__lista__links__link">Sobre Nós</a>
+            </li>
+            <li class="barra__lateral__lista__links__item">
+                <img src="./img/logout.svg" alt="icone de sair" class="barra__lateral__lista__links__item__img">
+                <a href="#" class="barra__lateral__lista__links__link">Sair</a>
+            </li>
 
+        </ul>
+    </aside>
+
+    <main>
+
+
+
+    </main>
+    
     <script src="script.js"></script>
 </body>
 
